--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
     "express": "^4.17.1",
+    "mongoose": "^5.6.9",
     "nodemon": "^1.19.1"
   },
   "devDependencies": {
