--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "test": "tests"
     },
     "dependencies": {
+        "axios": "^0.19.0",
         "chai": "^4.2.0",
         "chai-http": "^4.3.0",
         "dotenv": "^8.0.0",
